@@ -1,0 +1,20 @@
+#! /bin/sh -e
+# Test for help line colours while displaying error messages.
+
+. ../client/confmodule
+
+# Help line starts out with original colours.
+db_fset test-error/boolean seen false
+db_input critical test-error/boolean
+db_go
+
+# Help line changes to match error colours.
+db_input critical test-error/error
+db_go
+
+# Help line should return to original colours.
+db_fset test-error/boolean seen false
+db_input critical test-error/boolean
+db_go
+
+exit 0
