@@ -1,7 +1,12 @@
 cdebconf (0.116) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Increase TITLE_PADDING to 9 to allow for all extra characters around the
     title (newt frontend). Closes: #416543.
+
+  [ Colin Watson ]
+  * Restore newt help line to its original colours after displaying errors;
+    compare #317354.
 
  -- Frans Pop <fjp@debian.org>  Mon, 16 Apr 2007 20:16:55 +0200
 
